Closed
Bug 386229
Opened 18 years ago
Closed 17 years ago
Setting cursor with GIF, PNG or XBM doesn't work
Categories
(Core Graveyard :: Image: Painting, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.9beta1
People
(Reporter: alfredkayser, Assigned: alfredkayser)
References
()
Details
Attachments
(1 file, 3 obsolete files)
10.06 KB,
patch
|
emaijala+moz
:
review+
tor
:
superreview+
pavlov
:
approval1.9+
|
Details | Diff | Splinter Review |
See test: http://home.unet.nl/alfredkayser/cursor_test.html
The first two pointers work, but the third result in a black image.
Furthermore in Cairo the code to set cursor image can be optimized.
Asking for blocking1.9 as this is a regression from FF2.0 (caused by Cairo)
Flags: blocking1.9?
Attachment #270211 -
Flags: review?(emaijala)
Flags: blocking1.9? → blocking1.9-
Whiteboard: [wanted-1.9]
Updated•18 years ago
|
Attachment #270211 -
Flags: review?(emaijala) → review+
Assignee | ||
Updated•18 years ago
|
Attachment #270211 -
Flags: superreview?(tor)
Comment 1•18 years ago
|
||
+ // By passing negative heigth we tell Windows that the image is top-down
s/heigth/height/
Assignee | ||
Updated•17 years ago
|
Status: NEW → ASSIGNED
Comment on attachment 270211 [details] [diff] [review]
FIx 1bit cursor images and remove non-Cairo stuff
sr=tor with longsonr's nit fixed.
Attachment #270211 -
Flags: superreview?(tor) → superreview+
Assignee | ||
Comment 3•17 years ago
|
||
Comment on attachment 270211 [details] [diff] [review]
FIx 1bit cursor images and remove non-Cairo stuff
Asking for Approval1.9 as this is a regression from FF2.0 (caused by Cairo)
Attachment #270211 -
Flags: approval1.9?
Assignee | ||
Comment 4•17 years ago
|
||
Attachment #270211 -
Attachment is obsolete: true
Attachment #277696 -
Flags: approval1.9?
Attachment #270211 -
Flags: approval1.9?
Assignee | ||
Comment 5•17 years ago
|
||
Tor, can you recheck this patch?
More images have now transparency issues, see also http://e-vertise.com/warpzilla/OS2_Pointer_Test.html for more test cases showing this.
This patch solves all these issues, including the 16bit issue addressed in bug 383668.
This also removes the copying and reversing of the image data, as this is not needed, just pass a negative height to DataToBitmap and Windows takes care of the rest. Also remove Win95x stuff as it is no longer supported anyway.
Assignee: nobody → alfredkayser
Attachment #277696 -
Attachment is obsolete: true
Attachment #278039 -
Flags: superreview?(tor)
Attachment #277696 -
Flags: approval1.9?
Going by patch size (28K to 10K), it seems your patch has changed considerably. Shouldn't you get review again?
Assignee | ||
Comment 7•17 years ago
|
||
Comment on attachment 278039 [details] [diff] [review]
V3: Unbitrotted and updated to handle transparency really in the right way.
The big difference in size is caused by the non-cairo removal meanwhile.
But, best to be safe than sorry: Ere, can you re-review this patch?
Thanks in advance
Attachment #278039 -
Flags: review?(emaijala)
Assignee | ||
Updated•17 years ago
|
Summary: Setting cursor with XBM (1bit image) doesn't work → Setting cursor with GIF, PNG or XBM doesn't work
Assignee | ||
Comment 8•17 years ago
|
||
Attachment #278039 -
Attachment is obsolete: true
Attachment #278039 -
Flags: superreview?(tor)
Attachment #278039 -
Flags: review?(emaijala)
Assignee | ||
Comment 9•17 years ago
|
||
Comment on attachment 280873 [details] [diff] [review]
V4: Use PR_Free to match PR_Calloc
Can you please re-review tis patch (because of other updates meanwhile, the size of this patch has been reduced from 29KB to only 10KB).
Attachment #280873 -
Flags: superreview?(tor)
Attachment #280873 -
Flags: review?(emaijala)
Assignee | ||
Comment 10•17 years ago
|
||
Re-asking for Blocking 1.9, as the patch become seriously smaller, and without this fix, set cursor images (GIF, PNG, and XBM formats) doesn't work anymore as it did in FF2.0. So this really needs to be fixed for FF3.0/Gecko 1.9 to be for this functionality on par with FF2.0.
Flags: blocking1.9- → blocking1.9?
Comment 11•17 years ago
|
||
Comment on attachment 280873 [details] [diff] [review]
V4: Use PR_Free to match PR_Calloc
r=emaijala
Attachment #280873 -
Flags: review?(emaijala) → review+
Attachment #280873 -
Flags: superreview?(tor) → superreview+
Assignee | ||
Updated•17 years ago
|
Attachment #280873 -
Flags: approval1.9?
Updated•17 years ago
|
Attachment #280873 -
Flags: approval1.9? → approval1.9+
Comment 12•17 years ago
|
||
i don't think this should block 1.9 but it has approval+ so check it in before we go to code red.
Flags: blocking1.9? → blocking1.9-
Assignee | ||
Updated•17 years ago
|
Keywords: checkin-needed
Comment 13•17 years ago
|
||
Checking in widget/src/windows/nsWindow.cpp;
/cvsroot/mozilla/widget/src/windows/nsWindow.cpp,v <-- nsWindow.cpp
new revision: 3.710; previous revision: 3.709
done
Checking in widget/src/windows/nsWindow.h;
/cvsroot/mozilla/widget/src/windows/nsWindow.h,v <-- nsWindow.h
new revision: 3.243; previous revision: 3.242
done
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M9
Assignee | ||
Updated•17 years ago
|
Status: RESOLVED → VERIFIED
Updated•17 years ago
|
Flags: wanted1.9+
Whiteboard: [wanted-1.9]
You need to log in
before you can comment on or make changes to this bug.
Description
•