Bug 386229 - "Setting cursor with GIF, PNG or XBM doesn't work" [p=alfredkayser@nl.ibm.com (Alfred Kayser) r=emaijala sr=tor a1.9=stuart]